--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "88335q0vy8",
+  "name": "pf-fe-test",
   "version": "1.0.0",
   "description": "PF-Test",
   "main": "index.html",
@@ -15,5 +15,9 @@
     "@types/mocha": "5.2.5",
     "parcel-bundler": "^1.6.1"
   },
-  "keywords": []
+  "keywords": [
+    "pf",
+    "fe",
+    "test"
+  ]
 }
